--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,8 @@ footer, header, hgroup, main, menu, nav, section {
     display: none;
 }
 body {
-	line-height: 1;
+    line-height: 1;
+    letter-spacing: 1.25px;
 }
 ol, ul {
 	list-style: none;
@@ -57,7 +58,7 @@ html {
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1280px;
     width: 100%;
     margin: 0 auto;
 }
@@ -88,7 +89,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 34px;
+    padding-top: 31px;
 }
 .menu-item {
     position: relative;
@@ -96,7 +97,7 @@ html {
 
 
 .menu-item:not(:last-child) {
-    margin-right: 28px;
+    margin-right: 27px;
 }
 .menu-item:last-child  .menu-link::before {
     background-image: none;
@@ -109,7 +110,8 @@ html {
     font-size: 12px;
     font-family: 'Airbnb Cereal App Medium';
     position: relative;
-    padding-left: 28px;  
+    padding-left: 19px;
+    letter-spacing: 1.8px;
 }
 .menu-item:first-child .menu-link {
     padding-left: 0;
@@ -127,8 +129,12 @@ html {
     font-size: 10px;
 }
 .menu-item:nth-child(2) {
-    margin-right: 45px;
+    margin-right: 59px;
 }
+.menu-item:nth-child(2) .menu-link {
+    padding-left: 30px;
+}
+
 .menu-link::before {
     position: absolute;
     content: '';
@@ -206,10 +212,10 @@ html {
 .sidebar {
     display: flex;
     flex-direction: column;
-    max-width: 424px;
+    max-width: 447px;
     width: 100%;
     background-color: #2c2830;
-    padding: 60px 54px 60px 0;
+    padding: 64px 54px 106px 0;
     position: relative;
 }
 .main {
@@ -225,17 +231,31 @@ html {
     height: 100%;
 }
 .sidebar-items {
-    margin-bottom: 44px;
-    padding-left: 70px;
+    margin-bottom: 31px;
+    padding-left: 75px;
     border-bottom: 1px solid #979797;
+    opacity: .8;
 }
 .sidebar-items:first-child {
     border: none;
+    margin-bottom: 56px;
+}
+.sidebar-items:nth-child(3) {
+    margin-bottom: 57px;
+}
+.sidebar-items:nth-child(4) .sidebar-item  {
+    margin-bottom: 36px;
+}
+.sidebar-items:nth-child(4) .sidebar-list  {
+    max-width: 90%;
+}
+.sidebar-items--empty > .sidebar-title {
+    margin-bottom: 48px;
 }
 .progress-bar-wrap {
-    width: 160px;
+    width: 167px;
     height: 16px;
-    margin-bottom: 10px;
+    margin-bottom: 13px;
     border: 1px solid #c599e4;
     border-radius: 35px;
 }
@@ -248,13 +268,15 @@ html {
 .progress-bar-text {
     color: #fff;
     font-family: 'Airbnb Cereal App Book';
-    margin-bottom: 40px;
+    margin-bottom: 44px;
+    letter-spacing: 2.5px;
 }
 .sidebar-title {
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     font-size: 29px;
     font-family: 'Airbnb Cereal App Bold';
     color: #666468;
+    letter-spacing: 2.7px;
 }
 .sidebar-item {
     margin-bottom: 21px;
@@ -266,6 +288,7 @@ html {
     text-decoration: none;
     color: #fff;
     transition: all .2s ease;
+    letter-spacing: 2.4px;
 }
 .sidebar-link:hover {
     position: relative;
@@ -290,7 +313,7 @@ html {
 }
 .sidebar-items--bottom {
     border-top: 1px solid #979797;
-    padding-top: 47px;
+    padding-top: 54px;
     padding-bottom: 42px;
 }
 .sidebar-user {
@@ -301,6 +324,7 @@ html {
     color: #979797;
     font-size: 14px;
     font-family: 'Airbnb Cereal App Book';
+    letter-spacing: 1.9px;
 }
 .sidebar-user--image {
     margin-right: 15px;
@@ -309,6 +333,7 @@ html {
     margin-bottom: 10px;
     color: #fff;
     font-size: 20px;
+    letter-spacing: 3px;
     font-family: 'Airbnb Cereal App Book';
 }
 .sidebar-items-btn {
@@ -327,7 +352,7 @@ html {
 }
 .btn-border {
     background-color: transparent;
-    padding: 10px 26px;
+    padding: 10px 23px;
     text-transform: uppercase;
     font-size: 12px;
     font-family: 'Airbnb Cereal App Bold';
@@ -335,6 +360,7 @@ html {
     color: #8562ca;
     border: 1px solid #8562ca;
     border-radius: 25px;
+    letter-spacing: 1.5px;
 }
 .btn-simple {
     position: relative;
@@ -342,6 +368,8 @@ html {
     background-color: transparent;
     text-transform: uppercase;
     color: #fff;
+    letter-spacing: 1.2px;
+    font-size: 16px;
 }
 .btn-simple::before {
     position: absolute;
@@ -354,7 +382,7 @@ html {
     background: url(../image/css_sprites.png) -208px -114px;
 }
 .btn-succes {
-    padding: 12px 52px 12px 16px;
+    padding: 11px 47px 12px 16px;
     color: #000;
     background-color: #faf8fa;
     border: 1px solid #888;
@@ -363,6 +391,8 @@ html {
     background-color: transparent;
     font-family: 'Airbnb Cereal App Bold';
     position: relative;
+    letter-spacing: 0.6px;
+    font-size: 15px;
 }
 .btn-succes::after {
     position: absolute;
@@ -370,18 +400,19 @@ html {
     width: 21px; 
     height: 20px;
     background: url(../image/css_sprites.png) -254px -114px;
-    right: 6px;
+    right: 16px;
 }
 .btn-social {
     display: block;
     position: relative;
     margin-bottom: 15px;
-    min-width: 211px;
-    padding: 9px 16px 9px 40px;
-    border-radius: 3px;
+    min-width: 221px;
+    padding: 10px 16px 10px 40px;
+    border-radius: 5px;
     color: #fff;
     font-size: 16px;
     font-family: 'Airbnb Cereal App Medium';
+    letter-spacing: 1px;
 }
 .btn-social::after {
     position: absolute;
@@ -420,8 +451,8 @@ html {
 /* CONTENT */
 .content {
     padding-left: 80px;
-    padding-top: 61px;
-    padding-bottom: 67px;
+    padding-top: 64px;
+    padding-bottom: 86px;
     flex: 1;
 }
 
@@ -431,37 +462,54 @@ html {
     font-size: 31px;
     font-family: 'Airbnb Cereal App Bold';
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
 }
 .content-title {
-    padding-left: 22px;
-    padding-bottom: 14px;
+    padding-left: 44px;
+    /* padding-bottom: 0px; */
+    /* letter-spacing: 1px; */
     border-bottom: 1px solid #393939;
+    letter-spacing: 1.5px;
+    /* margin-bottom: 2px; */
+}
+.content-title--second {
+    padding-left: 44px;
+    margin-bottom: 8px;
+}
+.content-title--third {
+    padding-left: 45px;
+    margin-bottom: 16px;
 }
 .content-title--text {
     font-family: 'Airbnb Cereal App Bold';
-    padding-bottom: 6px;
     font-size: 19px;
+    padding-bottom: 13px;
 }
 .content-title--text-light {
     font-family: 'Airbnb Cereal App Light';
     font-size: 16px;
+    letter-spacing: 0.4px;
 }
 .content-title span {
     font-family: 'Airbnb Cereal App Book';
-    padding-left: 32px; 
+    padding-left: 14px;
+    letter-spacing: 0.4px;
 }
 .content-from {
-    margin-bottom: 90px;
+    margin-bottom: 92px;
+}
+.content-from--second {
+    margin-bottom: 75px;
 }
 .form-row {
-    padding-top: 29px;
-    padding-left: 22px;
+    padding-top: 30px;
+    padding-left: 28px;
 }
 .form-label {
     display: inline-block;
-    padding-left: 16px;
-    margin-bottom: 12px;
+    padding-left: 17px;
+    letter-spacing: 0.4px;
+    margin-bottom: 14px;
     font-family: 'Airbnb Cereal App Medium';
 }
 .form-field--inform {
@@ -553,7 +601,6 @@ html {
     font-size: 10px;
     width: 70px;
 }
-
 .bubble-label--lock::before {
     content: ' ';
     position: absolute;
@@ -575,14 +622,17 @@ html {
 
 .form-field {
     display: block;
-    padding: 9px 15px;
-    max-width: 450px;
+    padding: 10px 15px;
+    max-width: 471px;
     width: 100%;
     border: 1px solid #000;
     border-radius: 3px;
     color: #332c2c;
     font-family: 'Airbnb Cereal App Book';
     font-size: 16px;
+}
+.form-row--number {
+    padding-top: 45px;
 }
 .form-field--number:focus,
 .form-field:focus {
@@ -591,8 +641,10 @@ html {
     color: #784ed0;
 }
 .form-field--select {
-    width: 143px;
+    width: 119px;
+    padding: 9px 11px;
 }
+
 .form--verify {
     display: flex;
 }
@@ -603,7 +655,7 @@ html {
     display: flex;
 }
 .form-field--number {
-    max-width: 232px;
+    max-width: 244px;
     width: 100%;
     padding: 10px 15px;
     border: 1px solid #000;
@@ -612,14 +664,14 @@ html {
 }
 
 .content-social-btn {
-    margin-top: 30px;
+    margin-top: 51px;
     margin-left: 23px;
-    margin-bottom: 80px;
+    margin-bottom: 85px;
 }
 
 
 .form-help {
-    padding: 68px 65px;
+    padding: 76px 29px 76px 71px;
     background-color: #f8f6f9;
     border-radius: 5px;
 }
@@ -635,9 +687,10 @@ html {
     color: #2c2830;
 }
 .form-help--subtitle {
-    margin-bottom: 23px;
+    margin-bottom: 29px;
     font-family: 'Airbnb Cereal App Book';
     color: #59565c;
+    letter-spacing: 0.4px;
 }
 .form-help--img {
     align-self: flex-start;
@@ -647,19 +700,20 @@ html {
 }
 .form-help-row {
     display: flex;
-    margin-bottom: 14px;
+    margin-bottom: 17px;
 }
 
 .form-help-field {
     background-color: transparent;
-    padding: 9px 15px;
+    padding: 10px 15px;
     border: 1px solid #000;
     border-radius: 3px;
     color: #332c2c;
     font-family: 'Airbnb Cereal App Book';
-    font-size: 16px;
+    font-size: 15px;
     margin-right: 15px;
     width: calc(50% - 7px);
+    letter-spacing: 0;
 }
 .form-help-row .form-help-field:last-of-type {
     margin-right: 0;
@@ -667,8 +721,9 @@ html {
 textarea.form-help-field {
     width: 100%;
     resize: vertical;
-    min-height: 82px;
-    margin-bottom: 27px;
+    min-height: 88px;
+    margin-bottom: 11px;
+    padding: 18px 10px;
 }
 .form-help-row:last-child {
     justify-content: flex-end;
@@ -686,6 +741,7 @@ textarea.form-help-field {
     display: flex;
     justify-content: center;
     margin-bottom: 60px;
+    margin-left: 78px;
 }
 .footer-menu-list:last-child {
     margin-right: 0;
@@ -699,7 +755,7 @@ textarea.form-help-field {
     margin-right: 0;
 }
 .footer-menu-item:last-child .footer-menu-link:not(:last-child) {
-    margin-right: 7px;
+    margin-right: 14px;
 }
 .footer-menu-link {
     text-decoration: none;
@@ -707,6 +763,7 @@ textarea.form-help-field {
     font-size: 14px;
     font-family: 'Airbnb Cereal App Book';
     transition: all .2s ease;
+    letter-spacing: 1px;
 }
 .footer-bottom {
     height: 100px;
@@ -721,6 +778,7 @@ textarea.form-help-field {
 .footer-bottom .footer-menu-link {
     color: #fff;
     font-family: 'Airbnb Cereal App Medium';
+    font-size: 13px;
 }
 .footer-menu-link:hover {
     opacity: .8;
@@ -910,17 +968,21 @@ textarea.form-help-field {
 .star > span {
     color: #fff;
     font-family: 'Airbnb Cereal App Book';
+    letter-spacing: 2.5px;
 }
 .star {
     display: flex;
     align-items: center;
 }
+.rating {
+    margin-left: 7px;
+}
 .rating > input { display: none; } 
 .rating > label:before { 
-  margin: 5px;
-  font-size: 16px;
-  display: inline-block;
-  content: "\2605";
+    margin: 2px;
+    font-size: 16px;
+    display: inline-block;
+    content: "\2605";
 }
 .rating > label { 
     color: #483950; 
@@ -933,7 +995,7 @@ textarea.form-help-field {
 
 
 .footer .logo {
-    margin-bottom: 15px;
+    margin-bottom: 24px;
 }
 
 .menu_mobile_checkbox,
@@ -992,7 +1054,7 @@ textarea.form-help-field {
     }
     .form--verify {
         flex-direction: column;
-        max-width: 450px;
+        max-width: 471px;
     }
     .form--verify input {
         margin-bottom: 15px;
@@ -1002,7 +1064,7 @@ textarea.form-help-field {
     }
     .form--number {
         flex-direction: column;
-        max-width: 450px;
+        max-width: 471px;
     }
     .form-field--number {
         border-radius: 3px;
