--- a/css/main.css
+++ b/css/main.css
@@ -18,12 +18,10 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, main, menu, nav, section {
 	display: block;
 }
-/* HTML5 hidden-attribute fix for newer browsers */
 *[hidden] {
     display: none;
 }
@@ -58,7 +56,7 @@ html {
 }
 
 .container {
-    max-width: 1280px;
+    max-width: 1240px;
     width: 100%;
     margin: 0 auto;
 }
@@ -66,7 +64,7 @@ html {
 .header {
     border-bottom: 1px solid #2c2830;
     background-color: #fff;
-    height: 100px;
+    height: 101px;
 }
 .row {
     display: flex;
@@ -89,15 +87,18 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 31px;
+    padding-top: 36px;
 }
 .menu-item {
     position: relative;
 }
 
 
-.menu-item:not(:last-child) {
-    margin-right: 27px;
+.menu-item {
+    margin-right: 23px;
+}
+.menu-item:last-child {
+    margin-right: 0;
 }
 .menu-item:last-child  .menu-link::before {
     background-image: none;
@@ -111,7 +112,7 @@ html {
     font-family: 'Airbnb Cereal App Medium';
     position: relative;
     padding-left: 19px;
-    letter-spacing: 1.8px;
+    letter-spacing: 1.6px;
 }
 .menu-item:first-child .menu-link {
     padding-left: 0;
@@ -129,7 +130,7 @@ html {
     font-size: 10px;
 }
 .menu-item:nth-child(2) {
-    margin-right: 59px;
+    margin-right: 58px;
 }
 .menu-item:nth-child(2) .menu-link {
     padding-left: 30px;
@@ -212,7 +213,7 @@ html {
 .sidebar {
     display: flex;
     flex-direction: column;
-    max-width: 447px;
+    max-width: 433px;
     width: 100%;
     background-color: #2c2830;
     padding: 64px 54px 106px 0;
@@ -232,13 +233,17 @@ html {
 }
 .sidebar-items {
     margin-bottom: 31px;
-    padding-left: 75px;
+    padding-left: 71px;
     border-bottom: 1px solid #979797;
     opacity: .8;
 }
+.sidebar-image {
+    margin-left: -7px;
+    margin-bottom: -4px;
+}
 .sidebar-items:first-child {
     border: none;
-    margin-bottom: 56px;
+    margin-bottom: 51px;
 }
 .sidebar-items:nth-child(3) {
     margin-bottom: 57px;
@@ -250,17 +255,17 @@ html {
     max-width: 90%;
 }
 .sidebar-items--empty > .sidebar-title {
-    margin-bottom: 48px;
+    margin-bottom: 40px;
 }
 .progress-bar-wrap {
-    width: 167px;
+    width: 163px;
     height: 16px;
     margin-bottom: 13px;
     border: 1px solid #c599e4;
     border-radius: 35px;
 }
 .progress-bar {
-    width: 87%;
+    width: 80%;
     height: 100%;
     border-radius: 35px;
     background-image: linear-gradient(to right bottom, #633cbc, #7b45c2, #914fc7, #a55acd, #b865d3);
@@ -269,17 +274,17 @@ html {
     color: #fff;
     font-family: 'Airbnb Cereal App Book';
     margin-bottom: 44px;
-    letter-spacing: 2.5px;
+    letter-spacing: 2.4px;
 }
 .sidebar-title {
-    margin-bottom: 25px;
+    margin-bottom: 23px;
     font-size: 29px;
     font-family: 'Airbnb Cereal App Bold';
     color: #666468;
-    letter-spacing: 2.7px;
+    letter-spacing: 2.3px;
 }
 .sidebar-item {
-    margin-bottom: 21px;
+    margin-bottom: 20px;
 }
 .sidebar-link {
     font-size: 16px;
@@ -288,7 +293,22 @@ html {
     text-decoration: none;
     color: #fff;
     transition: all .2s ease;
-    letter-spacing: 2.4px;
+    letter-spacing: 2px;
+}
+.sidebar-item--active .sidebar-link {
+    position: relative;
+    color: #a467d2;
+    letter-spacing: 2.3px;
+}
+.sidebar-item--active .sidebar-link::before {
+    position: absolute;
+    left: -16px;
+    top: 5px;
+    content: '';
+    width: 8px;
+    height: 8px;
+    background-color: #a467d2;
+    border-radius: 50%;
 }
 .sidebar-link:hover {
     position: relative;
@@ -313,8 +333,9 @@ html {
 }
 .sidebar-items--bottom {
     border-top: 1px solid #979797;
-    padding-top: 54px;
+    padding-top: 40px;
     padding-bottom: 42px;
+    padding-left: 51px;
 }
 .sidebar-user {
     display: flex;
@@ -327,7 +348,7 @@ html {
     letter-spacing: 1.9px;
 }
 .sidebar-user--image {
-    margin-right: 15px;
+    margin-right: 23px;
 }
 .sidebar-user--name {
     margin-bottom: 10px;
@@ -382,7 +403,7 @@ html {
     background: url(../image/css_sprites.png) -208px -114px;
 }
 .btn-succes {
-    padding: 11px 47px 12px 16px;
+    padding: 11px 43px 9px 16px;
     color: #000;
     background-color: #faf8fa;
     border: 1px solid #888;
@@ -406,11 +427,11 @@ html {
     display: block;
     position: relative;
     margin-bottom: 15px;
-    min-width: 221px;
-    padding: 10px 16px 10px 40px;
+    min-width: 216px;
+    padding: 12px 16px 10px 40px;
     border-radius: 5px;
     color: #fff;
-    font-size: 16px;
+    font-size: 15px;
     font-family: 'Airbnb Cereal App Medium';
     letter-spacing: 1px;
 }
@@ -444,37 +465,33 @@ html {
     color: #fff;
     text-transform: uppercase;
     border-radius: 35px;
-    padding: 13px 27px;
+    padding: 13px 28px 10px 28px;
     box-shadow: 0 0 10px 3px #1c1c1c;
 }
 
 /* CONTENT */
 .content {
-    padding-left: 80px;
+    padding-left: 79px;
     padding-top: 64px;
-    padding-bottom: 86px;
+    padding-bottom: 79px;
     flex: 1;
 }
 
 .content-heading {
-    margin-bottom: 38px;
+    margin-bottom: 41px;
     color: #332c2c;
     font-size: 31px;
     font-family: 'Airbnb Cereal App Bold';
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 0.4px;
 }
 .content-title {
-    padding-left: 44px;
-    /* padding-bottom: 0px; */
-    /* letter-spacing: 1px; */
+    padding-left: 36px;
     border-bottom: 1px solid #393939;
-    letter-spacing: 1.5px;
-    /* margin-bottom: 2px; */
 }
 .content-title--second {
-    padding-left: 44px;
-    margin-bottom: 8px;
+    padding-left: 40px;
+    margin-bottom: 0;
 }
 .content-title--third {
     padding-left: 45px;
@@ -483,12 +500,13 @@ html {
 .content-title--text {
     font-family: 'Airbnb Cereal App Bold';
     font-size: 19px;
-    padding-bottom: 13px;
+    padding-bottom: 23px;
 }
 .content-title--text-light {
     font-family: 'Airbnb Cereal App Light';
     font-size: 16px;
-    letter-spacing: 0.4px;
+    letter-spacing: 0px;
+    padding-bottom: 12px;
 }
 .content-title span {
     font-family: 'Airbnb Cereal App Book';
@@ -496,19 +514,31 @@ html {
     letter-spacing: 0.4px;
 }
 .content-from {
-    margin-bottom: 92px;
+    margin-bottom: 91px;
 }
 .content-from--second {
     margin-bottom: 75px;
 }
+.content-from--second .form-label {
+    margin-bottom: 13px;
+}
+.content-from--second .form-row {
+    padding-top: 31px;
+}
+.content-from--second .form-field {
+    padding: 8px 15px;
+}
 .form-row {
-    padding-top: 30px;
-    padding-left: 28px;
+    padding-top: 28px;
+    padding-left: 25px;
+}
+.form-row:not(.form-row--inform) {
+    padding-right: 40px;
 }
 .form-label {
     display: inline-block;
-    padding-left: 17px;
-    letter-spacing: 0.4px;
+    padding-left: 15px;
+    letter-spacing: 0.1px;
     margin-bottom: 14px;
     font-family: 'Airbnb Cereal App Medium';
 }
@@ -622,8 +652,8 @@ html {
 
 .form-field {
     display: block;
-    padding: 10px 15px;
-    max-width: 471px;
+    padding: 9px 15px;
+    max-width: 460px;
     width: 100%;
     border: 1px solid #000;
     border-radius: 3px;
@@ -641,7 +671,7 @@ html {
     color: #784ed0;
 }
 .form-field--select {
-    width: 119px;
+    width: 145px;
     padding: 9px 11px;
 }
 
@@ -655,23 +685,23 @@ html {
     display: flex;
 }
 .form-field--number {
-    max-width: 244px;
+    max-width: 237px;
     width: 100%;
     padding: 10px 15px;
     border: 1px solid #000;
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
 }
-
+.form-field--code {
+    width: 115px;
+}
 .content-social-btn {
-    margin-top: 51px;
+    margin-top: 32px;
     margin-left: 23px;
     margin-bottom: 85px;
 }
-
-
 .form-help {
-    padding: 76px 29px 76px 71px;
+    padding: 69px 30px 76px 67px;
     background-color: #f8f6f9;
     border-radius: 5px;
 }
@@ -680,17 +710,21 @@ html {
     justify-content: space-between;
     align-items: center;
 }
+.form-help--text {
+    padding-left: 3px;
+}
 .form-help--title {
     margin-bottom: 13px;
     font-family: 'Airbnb Cereal App Medium';
     font-size: 29px;
     color: #2c2830;
+    letter-spacing: 0.7px;
 }
 .form-help--subtitle {
     margin-bottom: 29px;
     font-family: 'Airbnb Cereal App Book';
     color: #59565c;
-    letter-spacing: 0.4px;
+    letter-spacing: 0.2px;
 }
 .form-help--img {
     align-self: flex-start;
@@ -702,10 +736,9 @@ html {
     display: flex;
     margin-bottom: 17px;
 }
-
 .form-help-field {
     background-color: transparent;
-    padding: 10px 15px;
+    padding: 9px 15px;
     border: 1px solid #000;
     border-radius: 3px;
     color: #332c2c;
@@ -721,7 +754,7 @@ html {
 textarea.form-help-field {
     width: 100%;
     resize: vertical;
-    min-height: 88px;
+    min-height: 84px;
     margin-bottom: 11px;
     padding: 18px 10px;
 }
@@ -735,7 +768,9 @@ textarea.form-help-field {
 }
 .footer .logo {
     margin: auto;
-    padding-top: 30px;
+    padding-top: 23px;
+    padding-left: 58px;
+    margin-bottom: 28px;
 }
 .footer-menu-list {
     display: flex;
@@ -747,7 +782,10 @@ textarea.form-help-field {
     margin-right: 0;
 }
 .footer-menu-item {
-    margin-right: 43px;
+    margin-right: 57px;
+}
+.footer-top .footer-menu-item  {
+    margin-right: 38px;
 }
 .footer-menu-item:last-child {
     display: flex;
@@ -755,7 +793,7 @@ textarea.form-help-field {
     margin-right: 0;
 }
 .footer-menu-item:last-child .footer-menu-link:not(:last-child) {
-    margin-right: 14px;
+    margin-right: 25px;
 }
 .footer-menu-link {
     text-decoration: none;
@@ -813,7 +851,7 @@ textarea.form-help-field {
     transition: opacity 200ms;
     visibility: hidden;
     opacity: 0;
-    padding-top: 100px;
+    padding-top: 111px;
     overflow-y: scroll;
     z-index: 4;
 }
@@ -822,42 +860,47 @@ textarea.form-help-field {
     opacity: 1;
 }
 .modal-container {
-    max-width: 700px;
+    max-width: 750px;
     width: 100%;
     margin: 0 auto;
 }
 .modal-title h2 {
-    margin-bottom: 37px;
+    margin-bottom: 33px;
     text-transform: uppercase;
     color: #fff;
     font-size: 37px;
+    font-family: 'Cunia';
+    letter-spacing: 0.4px;
+    padding-left: 21px;
 }
 .modal-form {
-    max-width: 395px;
+    max-width: 400px;
     width: 100%;
-    margin: 0 auto 80px;
+    margin: 0 auto 87px;
 }
 .modal-form--title {
-    margin-bottom: 10px;
+    margin-bottom: 17px;
     text-align: center;
     font-size: 23px;
     color: #878489;
+    font-family: 'Airbnb Cereal App Book';
 }
 .modal-form--subtitle {
-    margin-bottom: 40px;
-    font-size: 16px;
+    margin-bottom: 31px;
+    font-size: 14px;
     font-family: 'Airbnb Cereal App Book';
     color: #878489;
-    line-height: 1.2em;
+    line-height: 1.5em;
+    letter-spacing: 0;
 }
 .modal-form--field--row {
-    margin-bottom: 30px;
+    margin-bottom: 28px;
 }
 .modal-form--field {
     width: 100%;
     border: 2px solid #e1e1e1;
     border-radius: 5px;
-    padding: 15px;
+    padding: 10px 15px;
     font-family: 'Airbnb Cereal App Book';
     color: #1c1c1c;
     font-size: 14px;
@@ -871,11 +914,11 @@ textarea.form-help-field {
 .modal-form--field-hide::after {
     position: absolute;
     content: '';
-    right: 17px;
-    top: 15px;
+    right: 21px;
     width: 24px; 
     height: 24px;
     background: url(../image/css_sprites.png) -260px -62px;
+    top: 10px;
 }
 .modal-form--field--row span {
     margin-top: 5px;
@@ -883,6 +926,7 @@ textarea.form-help-field {
     font-family: 'Airbnb Cereal App Book';
     font-size: 12px;
     line-height: 1em;
+    letter-spacing: 0.8px;
 }
 .modal-form--btn {
     text-align: center;
@@ -890,7 +934,7 @@ textarea.form-help-field {
 .modal-social-btn {
    display: flex;
    justify-content: center;
-   margin-bottom: 55px;
+   margin-bottom: 44px;
 }
 .modal-social-btn-wrap {
     position: relative;
@@ -907,31 +951,32 @@ textarea.form-help-field {
     color: #f63468;
     font-size: 14px;
     font-family: 'Airbnb Cereal App Book';
-    font-family: 'Airbnb Cereal App Bold';
 }
 .modal-footer {
     border-top: 2px solid #201d23;
-    padding: 42px 0 52px;
+    padding: 38px 0 52px;
     text-align: center;
 }
 .modal-footer--text {
     color: #fff;
-    font-size: 14px;
+    font-size: 13px;
     font-family: 'Airbnb Cereal App Book';
-    max-width: 378px;
+    max-width: 390px;
     width: 100%;
     margin: 0 auto;
-    line-height: 1.2em;
+    line-height: 1.4em;
+    letter-spacing: 0.6px;
 }
 .modal-footer--text:first-child {
     margin-bottom: 15px;
 }
 .modal-footer--text .modal-footer--link {
     color: #6d41bf;
-    font-size: inherit;
+    font-size: 13px;
     font-family: inherit;
     text-decoration: none;
     transition: all .2s ease-in;
+    letter-spacing: 0.5px;
 }
 .modal-footer--text .modal-footer--link:hover {
     opacity: .8;
@@ -939,8 +984,8 @@ textarea.form-help-field {
 .modal-btn-close {
     position: absolute;
     color: #fff;
-    top: 70px;
-    right: 200px;
+    top: 88px;
+    right: 368px;
     width: 40px;
     height: 40px;
 }
@@ -949,7 +994,7 @@ textarea.form-help-field {
     content: '';
     left: 50%;
     width: 2px;
-    height: 40px;
+    height: 54px;
     background-color: #fff;
     transform: rotate(-45deg);
 }
@@ -958,7 +1003,7 @@ textarea.form-help-field {
     content: '';
     left: 50%;
     width: 2px;
-    height: 40px;
+    height: 54px;
     background-color: #fff;
     transform: rotate(45deg);
 }
@@ -968,7 +1013,7 @@ textarea.form-help-field {
 .star > span {
     color: #fff;
     font-family: 'Airbnb Cereal App Book';
-    letter-spacing: 2.5px;
+    letter-spacing: 2px;
 }
 .star {
     display: flex;
@@ -992,23 +1037,21 @@ textarea.form-help-field {
 .rating:not(:checked) > label:hover,
 .rating:not(:checked) > label:hover ~ label { color: #a467d2;  }
 
-
-
-.footer .logo {
-    margin-bottom: 24px;
-}
-
 .menu_mobile_checkbox,
 .burger {
     display: none;
 }
-@media screen and (max-width: 1200px) {
+
+@media screen and (max-width: 1600px) {
     .modal-btn-close {
-        top: 50px;
+        right: 100px;
     }
 }
 
 @media screen and (max-width: 1200px) {
+    .modal-btn-close {
+        top: 50px;
+    }
     .bubble {
         left: -174px;
         background: #fff;
@@ -1035,6 +1078,12 @@ textarea.form-help-field {
     .menu-item {
         margin-right: 16px;
     }
+    .menu .menu-item {
+        margin-right: 13px;
+    }
+    .menu .menu-item:nth-child(2) {
+        margin-right: 28px;   
+    }
     
     .menu-link {
         padding-left: 24px;
@@ -1050,7 +1099,6 @@ textarea.form-help-field {
         margin-right: 0;
         width: 100%;
         margin-bottom: 15px;
-        
     }
     .form--verify {
         flex-direction: column;
@@ -1165,8 +1213,8 @@ textarea.form-help-field {
     }
     .menu_mobile_checkbox:checked ~ .menu {
         display: flex;
-        
     }
+
     .menu {
         flex-direction: column;
         align-items: flex-end;
@@ -1180,10 +1228,12 @@ textarea.form-help-field {
         background-color: #fff;
         z-index: 2;
     }
+
     .menu-item span {
         right: -10px;
     }
-    .menu-item:not(:last-child) {
+
+    .menu-item {
         margin-right: 45px;
         padding: 20px;
     }
@@ -1199,6 +1249,7 @@ textarea.form-help-field {
         flex-direction: column;
         align-items: center;
         margin-bottom: 20px;
+        margin-left: 0;
     }
     .footer-menu-item {
         margin-right: 0;
@@ -1212,14 +1263,14 @@ textarea.form-help-field {
     .footer-bottom {
         height: auto;
     }
+    .footer-top .footer-menu-item {
+        margin-right: 0;
+    }
     .footer-bottom-items {
         justify-content: center;
         align-items: center;
         flex-direction: column;
         padding: 20px 0;
-    }
-    .modal {
-
     }
     .modal-title h2 {
         font-size: 23px;
@@ -1247,15 +1298,16 @@ textarea.form-help-field {
         right: 50%;
         transform: translateX(50%);
     }
+
     /* FORM HELP */
     .form-help {
         padding: 40px 30px;
     }
 
     /* MAIN */
-        .main .row {
-            flex-flow: column wrap;
-        }
+    .main .row {
+        flex-flow: column wrap;
+    }
     .menu_mobile_checkbox:checked .sidebar{
         position: absolute;
     }
@@ -1270,7 +1322,6 @@ textarea.form-help-field {
         margin-bottom: 10px;
     }
     
-
     /* SIDEBAR */
     .sidebar {
         padding: 50px 10px;
@@ -1304,7 +1355,5 @@ textarea.form-help-field {
     }
 }
 
-.form-row:not(.form-row--inform) {
-    padding-right: 40px;
-}
+
 
