--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,9 @@ html {
     width: 100%;
     margin: 0 auto;
 }
+.container-flex {
+    display: flex;
+}
 @media screen and (max-width: 1200px) {
     .container {
         padding-right: 20px;
@@ -74,7 +77,6 @@ html {
 .header {
     border-bottom: 1px solid #2c2830;
     background-color: #fff;
-    /* height: 75px; */
 }
 .row {
     display: flex;
@@ -85,8 +87,6 @@ html {
     display: flex;
     padding-left: 70px;
     padding-top: 15px;
-    /* margin-top: auto;
-    margin-bottom: auto; */
 }
 .logo-link {
     background: url(../image/css_sprites.png) -114px -10px;
@@ -103,8 +103,6 @@ html {
 .menu-item {
     position: relative;
 }
-
-
 .menu-item {
     margin-right: 23px;
 }
@@ -228,15 +226,16 @@ html {
     width: 100%;
     background-color: #2c2830;
     padding: 35px 54px 106px 0;
-    /* position: absolute; */
-    /* top: 80px; */
     position: relative;
 }
 
 .main {
     position: relative;
 }
-.main::before {
+.wrap {
+    position: relative;
+}
+.wrap::before {
     width: calc((100% - 1150px) / 2 );
     background-color: #2c2830;
     position: absolute;
@@ -246,8 +245,7 @@ html {
     height: 100%;
 }
 .sidebar-items {
-    margin-bottom: 20px;
-    padding-left: 71px;
+    padding: 20px 25px 20px 71px;
     border-bottom: 1px solid #58555b;
 }
 .sidebar-image {
@@ -272,10 +270,9 @@ html {
 }
 .sidebar-items:first-child {
     border: none;
-    margin-bottom: 25px;
 }
-.sidebar-items:nth-child(4) .sidebar-list  {
-    max-width: 90%;
+.sidebar-list .sidebar-item:first-child {
+    margin-bottom: 10px;
 }
 .progress-bar-wrap {
     width: 163px;
@@ -303,9 +300,6 @@ html {
     font-family: 'Airbnb Cereal App Bold';
     color: #666468;
     letter-spacing: 2.3px;
-}
-.sidebar-item {
-    margin-bottom: 8px;
 }
 .sidebar-link {
     font-size: 13px;
@@ -347,15 +341,13 @@ html {
 }
 .sidebar-items--empty {
     border-bottom: none;
-    margin-bottom: 1505px;
+    margin-bottom: auto;
 }
 .sidebar-items:last-child {
     border-bottom: none;
 }
 .sidebar-items--bottom {
     border-top: 1px solid #58555b;
-    padding-top: 20px;
-    padding-bottom: 20px;
 }
 .sidebar-user {
     display: flex;
@@ -426,7 +418,7 @@ html {
     padding: 11px 43px 9px 16px;
     color: #000;
     background-color: #faf8fa;
-    border: 1px solid #888;
+    border: 1px solid #ccc;
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
     background-color: transparent;
@@ -505,7 +497,7 @@ html {
     letter-spacing: 0.4px;
 }
 .content-title {
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid #ccc;
 }
 .content-title--second {
     margin-bottom: 0;
@@ -775,7 +767,7 @@ html {
 .form-help-field {
     background-color: transparent;
     padding: 9px 15px;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     border-radius: 3px;
     color: #332c2c;
     font-family: 'Airbnb Cereal App Book';
@@ -895,6 +887,7 @@ textarea.form-help-field {
     opacity: 0;
     overflow-y: auto;
     z-index: 4;
+    display: flex;
 }
 .modal:target {
     visibility: visible;
@@ -905,8 +898,9 @@ textarea.form-help-field {
     background-color: #2c2830;
     max-width: 750px;
     width: 100%;
-    margin: 0 auto;
+    margin: auto;
     padding-top: 40px;
+    box-shadow: 0 0 40px 0 rgba(0,0,0,.8);
 }
 .modal-container {
     max-width: 750px;
@@ -928,14 +922,14 @@ textarea.form-help-field {
     margin: 0 auto 25px;
 }
 .modal-form--title {
-    margin-bottom: 12px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 23px;
     color: #878489;
     font-family: 'Airbnb Cereal App Book';
 }
 .modal-form--subtitle {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     font-size: 14px;
     font-family: 'Airbnb Cereal App Book';
     color: #878489;
@@ -982,7 +976,7 @@ textarea.form-help-field {
 .modal-social-btn {
    display: flex;
    justify-content: center;
-   margin-bottom: 15px;
+   margin-bottom: 25px;
 }
 .modal-social-btn-wrap {
     position: relative;
@@ -1002,7 +996,7 @@ textarea.form-help-field {
 }
 .modal-footer {
     border-top: 2px solid #201d23;
-    padding: 15px 0;
+    padding: 20px 0;
     text-align: center;
 }
 .modal-footer--text {
@@ -1174,10 +1168,8 @@ textarea.form-help-field {
     }
     .sidebar {
         max-width: 374px;
+        padding: 35px 20px 106px 20px;
     }
-    /* .form-row {
-        padding-left: 12px;
-    } */
     .footer-bottom {
         height: 100%;
     }
@@ -1203,10 +1195,15 @@ textarea.form-help-field {
         height: 70px;
     }
     .logo {
-        padding-left: 10px;
+        padding-left: 35px;
     }
     .menu {
         display: none;
+    }
+    .footer {
+        position: static;
+        width: 100%;
+        bottom: 100%;
     }
     .burger {
         display: block;
@@ -1258,7 +1255,7 @@ textarea.form-help-field {
         top: 19px;
     }
     .menu_mobile_checkbox:checked ~ .burger span:nth-child(1) {
-        top: 15px;
+        top: 7px;
         -webkit-transform: rotate(135deg);
         -moz-transform: rotate(135deg);
         -o-transform: rotate(135deg);
@@ -1269,21 +1266,41 @@ textarea.form-help-field {
         left: -60px;
     }
     .menu_mobile_checkbox:checked ~ .burger span:nth-child(3) {
-        top: 15px;
+        top: 7px;
         -webkit-transform: rotate(-135deg);
         -moz-transform: rotate(-135deg);
         -o-transform: rotate(-135deg);
         transform: rotate(-135deg);
     }
-    .menu_mobile_checkbox:checked ~ .sidebar {
+    .menu_mobile_checkbox:checked ~ .wrap .sidebar {
         transform: translateX(0);
+
+    }
+    .menu_mobile_checkbox:checked ~  .footer {
+        position: fixed;
+
+    }
+    .menu_mobile_checkbox:checked ~ .wrap .content {
+        min-height: 100%;
+        position: fixed;
+        width: 100%;
+        
     }
     .sidebar {
-        transform: translateX(-450px);
-        z-index: 3;
-        top: 0;
-        transition: transform .3s ease-in;
+        padding: 25px 20px;
         position: absolute;
+        top: 0;
+        transform: translateX(-450px);
+        transition: transform .3s ease-in;
+        z-index: 3; 
+        min-height: calc(100vh - 70px);      
+    }
+    .sidebar > div {
+        min-height: 100%;
+        position: relative;
+    }
+    .sidebar-items {
+        padding: 20px 25px;
     }
     .sidebar-items--empty {
         margin-bottom: 0;
@@ -1294,7 +1311,7 @@ textarea.form-help-field {
         margin-bottom: 20px;
         margin-left: 0;
     }
-
+    
     .footer .logo {
         margin-bottom: 15px;
         padding: 30px 0 0 0;
@@ -1361,7 +1378,13 @@ textarea.form-help-field {
     .modal-social-btn .btn-social {
         font-size: 15px;
     }
-    .content {
+    .sidebar {
+        padding: 20px;
+    }
+    .sidebar-items {
+        padding-left: 25px;
+    }
+    .logo {
         padding-left: 20px;
     }
 }
@@ -1387,3 +1410,4 @@ textarea.form-help-field {
 .footer-menu-link {
     display: block;
 }
+
